bench/results/v0.21.0/summary.md
# Boring CMS benchmark v0.21.0

Run: 2026-09-22T07:45:46.716Z on Linux 7.1.10-200.fc44.x86_64, AMD Ryzen 5 5600X 6-Core Processor (12 cores host).
Constraints and methodology: see bench/README.md. Read it before comparing numbers; the CPU pinning, memory caps, rate limit override, and client placement all shape these results.

## Throughput (ops/s) by phase

| Phase | bun-1cpu | bun-2cpu | bun-4cpu | deno-1cpu | deno-2cpu | deno-4cpu | node-1cpu | node-2cpu | node-4cpu |
| --- | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: |
| schema_apply | 812.3 | 877.3 | 831.4 | 632.5 | 820.3 | 788.7 | 570.4 | 744.3 | 900.1 |
| schema_read | 2407.3 | 2251.7 | 2550.3 | 1855.3 | 2286.3 | 2270.8 | 1943.3 | 2391.1 | 2235.8 |
| create_short | 1366.8 | 1419.9 | 1494.1 | 1357 | 1484.7 | 1363.2 | 1247.8 | 1456.3 | 1438 |
| create_long | 933 | 933.6 | 939.6 | 910.3 | 982.4 | 969.3 | 869.5 | 889.4 | 921 |
| create_short_restcall | 1964.9 | 2079.6 | 2020.9 | 1940.6 | 1877.8 | 2012.8 | 1761.3 | 1910.4 | 2008.6 |
| batch_create_short_x200 | 124.7 | 145.9 | 147.1 | 105.1 | 106.7 | 109.1 | 116.9 | 119.9 | 120.4 |
| read_list_short | 2719.9 | 3553 | 3343.6 | 3270.9 | 3249.6 | 3437.1 | 2921.7 | 3653.6 | 3514.3 |
| read_list_long | 2564.7 | 2674 | 2757.1 | 2743.5 | 2801.4 | 2539.6 | 2270.7 | 2435.4 | 2675.6 |
| read_single_short | 4301.6 | 4722.9 | 4467.9 | 4539.8 | 4074.3 | 4191.9 | 3776.7 | 4210 | 4292.3 |
| read_single_long | 2166.8 | 2714.7 | 2702.2 | 2621.7 | 2561.6 | 2633.7 | 2660.6 | 2866.9 | 2639.2 |
| read_304_etag | 3914.4 | 4701.1 | 4473.8 | 3700.8 | 4184.5 | 4728.6 | 4789.4 | 4696.1 | 4695.3 |
| update_then_read | 1150.7 | 1193.5 | 1257.1 | 1072.5 | 1109.5 | 1117.3 | 1150.4 | 1161 | 1131.6 |
| rewrite_dry_1pair | 213.1 | 227.1 | 252.7 | 202.7 | 211.7 | 206.7 | 200.3 | 221.4 | 215.8 |
| rewrite_dry_200pairs | 80.2 | 102.8 | 110.5 | 145.2 | 149.7 | 142.8 | 148.2 | 153.5 | 141.1 |
| rewrite_live_200pairs | 75.5 | 79.7 | 80.4 | 89.2 | 113.6 | 99.1 | 83.2 | 98.8 | 111 |
| media_upload_64kb | 1191.3 | 1103.8 | 1244.6 | 736.1 | 821 | 808.8 | 807 | 995.2 | 968.7 |
| media_serve_64kb | 1732.3 | 1760.6 | 1971.6 | 1626.4 | 1734.3 | 1816.4 | 1415.4 | 1612.6 | 1809.1 |
| media_reupload | 1183.6 | 1422 | 1264.8 | 1059 | 1156.9 | 1025.5 | 787.5 | 938 | 1201.6 |
| media_delete | 2267.8 | 2529.1 | 2441.7 | 2167.3 | 2172.4 | 2156.6 | 2264.7 | 2319.5 | 2287.7 |
| link_access | 4354.9 | 4460.6 | 4547.5 | 3964.9 | 3811.9 | 4163.3 | 3741.8 | 3940.3 | 3536.5 |
| read_concurrent_20 | 7465.5 | 7741.8 | 7582.6 | 6931.3 | 7413.3 | 7350.6 | 6078.9 | 6736.3 | 7262.7 |
| write_concurrent_10 | 3782.9 | 4079.2 | 3764.1 | 3117.6 | 3609.6 | 3672.4 | 3092.6 | 3408.8 | 3064 |
| schedule_future | 1089.6 | 1076 | 1110.8 | 977.3 | 1156.9 | 1024.1 | 964.1 | 1068.3 | 989.8 |
| read_list_short_with_scheduled | 2817.5 | 2913.2 | 2872.6 | 2176.1 | 2277.5 | 2750.4 | 2642.5 | 2761 | 2707.2 |
| read_single_scheduled_404 | 5643.1 | 5312.8 | 4886.2 | 3961.9 | 4675.2 | 4640.2 | 4985 | 4653.3 | 4843.3 |
| list_scheduled | 1696.8 | 1581.1 | 1603.1 | 1357.8 | 1443.7 | 1364.4 | 1479.3 | 1442.3 | 1409.4 |
| get_entry_draft_scheduled | 2453.2 | 2677.3 | 2770.6 | 1961.1 | 2573 | 2491.5 | 2572 | 2504.7 | 2290.5 |
| reschedule_entry | 2126.9 | 2288.9 | 2442.3 | 2157.7 | 2313.6 | 2176 | 2321.6 | 2274.2 | 2056.5 |
| scheduled_goes_live | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
| misc_seed | 1155.9 | 1553.6 | 1583.6 | 1337.3 | 1309 | 1401.1 | 1407.9 | 1347.9 | 1354 |
| misc_read_only | 5461 | 6524.7 | 6488.6 | 5953.6 | 6289.3 | 6013.9 | 5872.1 | 5972.3 | 5956.1 |
| misc_read_write | 5769 | 6556.1 | 6605.3 | 4975.6 | 5401.6 | 5294.1 | 5203.2 | 5323.3 | 5291.1 |
| misc_write_votes | 10023.3 | 9816.8 | 9219.1 | 9026.1 | 9261.2 | 9985.3 | 8906.1 | 9262.5 | 8933 |
| misc_write_edits | 2638.8 | 2744.8 | 2545.9 | 2507.5 | 2499.5 | 2428 | 2054.3 | 2419 | 2568.7 |
| misc_hot_votes | 9505.3 | 11078.3 | 10246.4 | 8876.7 | 9593.4 | 9508.5 | 8603 | 9737.8 | 9423.4 |
| misc_hot_mixed | 11811.1 | 12421 | 11514.6 | 9070.1 | 9924.6 | 10526.2 | 11114.7 | 10990.2 | 10338.1 |
| misc_hot_repeat_voters | 10230.1 | 11991.2 | 11772.2 | 9072.2 | 10297.9 | 10427.9 | 10461.7 | 10504.7 | 10161.4 |
| misc_private_bump | 10318.8 | 12165.8 | 12190.8 | 8925.9 | 10631.2 | 10255.9 | 8107.1 | 8987.6 | 8352.7 |
| openapi_read | 5553.4 | 6916.2 | 5679.3 | 5783.6 | 6178 | 6391.2 | 5900.4 | 6071.9 | 5587.3 |
| auth_gate_probes | 3702.1 | 3884.8 | 3397.7 | 3767.4 | 3893.7 | 3635.6 | 3872.9 | 3682.1 | 3731.5 |
| rate_limit_on | 3774.9 | 4092.5 | 3510.6 | 3541.4 | 3793.3 | 3606 | 2447.5 | 3606.6 | 3211.3 |
| delete_entries | 2580.6 | 2810.7 | 2812.6 | 2739.8 | 2777.8 | 2577.6 | 2636.5 | 2620.1 | 2778.2 |

## Latency p50 / p95 (ms) by phase

| Phase | bun-1cpu | bun-2cpu | bun-4cpu | deno-1cpu | deno-2cpu | deno-4cpu | node-1cpu | node-2cpu | node-4cpu |
| --- | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: |
| schema_apply | 0.98 / 2.45 | 1.02 / 2.63 | 0.9 / 2.59 | 1.62 / 2.65 | 1.19 / 2.33 | 1.2 / 2.41 | 1.56 / 3.08 | 1.23 / 2.54 | 0.9 / 2.16 |
| schema_read | 0.35 / 0.8 | 0.4 / 0.9 | 0.35 / 0.78 | 0.44 / 0.89 | 0.39 / 0.84 | 0.39 / 0.93 | 0.43 / 0.94 | 0.36 / 0.82 | 0.42 / 0.84 |
| create_short | 0.64 / 1.45 | 0.65 / 0.94 | 0.61 / 0.95 | 0.7 / 1 | 0.64 / 0.88 | 0.69 / 0.95 | 0.68 / 1.24 | 0.65 / 0.89 | 0.66 / 0.9 |
| create_long | 0.99 / 1.64 | 0.99 / 1.55 | 1.01 / 1.81 | 1 / 1.7 | 0.95 / 1.33 | 0.98 / 1.37 | 1.03 / 1.95 | 1.05 / 1.71 | 1.04 / 1.57 |
| create_short_restcall | 0.45 / 0.71 | 0.45 / 0.58 | 0.46 / 0.56 | 0.47 / 0.69 | 0.49 / 0.64 | 0.45 / 0.62 | 0.5 / 0.8 | 0.46 / 0.73 | 0.47 / 0.61 |
| batch_create_short_x200 | 7.74 / 9.25 | 6.53 / 7.6 | 6.61 / 7.41 | 9.92 / 10.17 | 9.13 / 10.04 | 9.02 / 9.94 | 8.56 / 9.39 | 8.17 / 9.24 | 8.68 / 8.69 |
| read_list_short | 0.28 / 0.66 | 0.25 / 0.39 | 0.27 / 0.36 | 0.27 / 0.41 | 0.27 / 0.42 | 0.27 / 0.32 | 0.32 / 0.5 | 0.25 / 0.4 | 0.25 / 0.39 |
| read_list_long | 0.28 / 0.64 | 0.28 / 0.53 | 0.28 / 0.5 | 0.27 / 0.52 | 0.28 / 0.45 | 0.29 / 0.71 | 0.36 / 0.53 | 0.32 / 0.47 | 0.28 / 0.45 |
| read_single_short | 0.2 / 0.27 | 0.2 / 0.25 | 0.21 / 0.26 | 0.21 / 0.27 | 0.25 / 0.27 | 0.24 / 0.28 | 0.24 / 0.29 | 0.23 / 0.28 | 0.23 / 0.27 |
| read_single_long | 0.33 / 0.93 | 0.35 / 0.46 | 0.36 / 0.42 | 0.34 / 0.52 | 0.39 / 0.44 | 0.36 / 0.44 | 0.37 / 0.48 | 0.34 / 0.4 | 0.38 / 0.45 |
| read_304_etag | 0.19 / 0.52 | 0.18 / 0.23 | 0.21 / 0.24 | 0.2 / 0.29 | 0.21 / 0.27 | 0.2 / 0.25 | 0.19 / 0.25 | 0.19 / 0.26 | 0.19 / 0.26 |
| update_then_read | 0.78 / 1.3 | 0.77 / 1.04 | 0.72 / 0.92 | 0.88 / 1.27 | 0.83 / 1.07 | 0.83 / 1.02 | 0.8 / 1.1 | 0.8 / 1.03 | 0.84 / 1.04 |
| rewrite_dry_1pair | 4.69 / 4.69 | 4.4 / 4.4 | 3.96 / 3.96 | 4.93 / 4.93 | 4.72 / 4.72 | 4.84 / 4.84 | 4.99 / 4.99 | 4.52 / 4.52 | 4.63 / 4.63 |
| rewrite_dry_200pairs | 12.47 / 12.47 | 9.72 / 9.72 | 9.05 / 9.05 | 6.88 / 6.88 | 6.68 / 6.68 | 7 / 7 | 6.75 / 6.75 | 6.51 / 6.51 | 7.08 / 7.08 |
| rewrite_live_200pairs | 13.24 / 13.24 | 12.54 / 12.54 | 12.43 / 12.43 | 11.21 / 11.21 | 8.8 / 8.8 | 10.08 / 10.08 | 12.01 / 12.01 | 10.12 / 10.12 | 9.01 / 9.01 |
| media_upload_64kb | 0.76 / 1.29 | 0.74 / 1.77 | 0.74 / 1.02 | 0.97 / 1.77 | 1.03 / 2.71 | 1.01 / 1.48 | 0.82 / 2.03 | 0.81 / 1.01 | 0.87 / 1.1 |
| media_serve_64kb | 0.51 / 1.12 | 0.47 / 1.17 | 0.46 / 0.71 | 0.5 / 0.87 | 0.51 / 0.72 | 0.52 / 0.74 | 0.52 / 0.94 | 0.48 / 0.83 | 0.47 / 0.76 |
| media_reupload | 0.65 / 1.43 | 0.67 / 0.84 | 0.78 / 0.86 | 0.9 / 1.09 | 0.83 / 0.96 | 0.91 / 1.16 | 0.71 / 1.19 | 0.75 / 1.3 | 0.77 / 1.06 |
| media_delete | 0.33 / 1.08 | 0.33 / 0.82 | 0.33 / 1.13 | 0.42 / 0.66 | 0.42 / 0.54 | 0.41 / 0.54 | 0.36 / 0.66 | 0.37 / 0.53 | 0.4 / 0.52 |
| link_access | 0.21 / 0.3 | 0.21 / 0.3 | 0.21 / 0.27 | 0.23 / 0.36 | 0.26 / 0.32 | 0.24 / 0.29 | 0.23 / 0.3 | 0.24 / 0.32 | 0.26 / 0.42 |
| read_concurrent_20 | 2.25 / 4.68 | 2.22 / 4.8 | 2.31 / 4.74 | 2.46 / 4.37 | 2.45 / 3.91 | 2.36 / 4.13 | 2.42 / 5.68 | 2.36 / 4.95 | 2.32 / 4.73 |
| write_concurrent_10 | 2.33 / 5.1 | 2.05 / 5.86 | 2.28 / 5.54 | 2.68 / 6.51 | 2.25 / 5.13 | 2.24 / 5.15 | 2.53 / 5.8 | 2.24 / 5.09 | 2.52 / 5.76 |
| schedule_future | 0.75 / 1.33 | 0.8 / 1.14 | 0.77 / 0.97 | 0.9 / 1.23 | 0.83 / 1.02 | 0.86 / 1.16 | 0.88 / 1.36 | 0.79 / 1.09 | 0.9 / 1.07 |
| read_list_short_with_scheduled | 0.33 / 0.44 | 0.32 / 0.42 | 0.33 / 0.43 | 0.41 / 0.6 | 0.38 / 0.45 | 0.35 / 0.4 | 0.36 / 0.45 | 0.35 / 0.41 | 0.35 / 0.45 |
| read_single_scheduled_404 | 0.16 / 0.22 | 0.18 / 0.22 | 0.19 / 0.26 | 0.22 / 0.26 | 0.2 / 0.28 | 0.21 / 0.25 | 0.18 / 0.25 | 0.2 / 0.26 | 0.2 / 0.25 |
| list_scheduled | 0.58 / 0.71 | 0.61 / 0.73 | 0.6 / 0.72 | 0.72 / 0.95 | 0.68 / 0.74 | 0.7 / 0.89 | 0.67 / 0.78 | 0.69 / 0.76 | 0.68 / 0.85 |
| get_entry_draft_scheduled | 0.36 / 0.46 | 0.37 / 0.4 | 0.35 / 0.4 | 0.4 / 0.72 | 0.39 / 0.43 | 0.39 / 0.49 | 0.38 / 0.44 | 0.39 / 0.44 | 0.42 / 0.53 |
| reschedule_entry | 0.41 / 0.64 | 0.42 / 0.5 | 0.4 / 0.46 | 0.45 / 0.53 | 0.42 / 0.47 | 0.45 / 0.52 | 0.41 / 0.53 | 0.44 / 0.48 | 0.47 / 0.58 |
| scheduled_goes_live | 3106.08 / 3106.08 | 3105.14 / 3105.14 | 3105.4 / 3105.4 | 3105.89 / 3105.89 | 3105.38 / 3105.38 | 3106.19 / 3106.19 | 3105.08 / 3105.08 | 3105.47 / 3105.47 | 3106.18 / 3106.18 |
| misc_seed | 0.71 / 1.72 | 0.62 / 0.76 | 0.61 / 0.7 | 0.67 / 1.01 | 0.68 / 0.84 | 0.66 / 0.84 | 0.64 / 1.01 | 0.68 / 0.92 | 0.67 / 0.92 |
| misc_read_only | 2.44 / 5.71 | 2.28 / 3.92 | 2.27 / 3.94 | 2.42 / 4.14 | 2.39 / 4.01 | 2.35 / 4.46 | 2.33 / 5.04 | 2.39 / 4.78 | 2.38 / 4.7 |
| misc_read_write | 2.45 / 5.08 | 2.29 / 4.01 | 2.3 / 3.9 | 2.77 / 5.9 | 2.75 / 5 | 2.79 / 4.9 | 2.67 / 5.46 | 2.54 / 5.22 | 2.63 / 5.15 |
| misc_write_votes | 2.79 / 5.41 | 2.81 / 5.54 | 3.06 / 4.08 | 3.07 / 5.53 | 3.04 / 4.77 | 2.89 / 3.89 | 2.97 / 6.02 | 3 / 5.81 | 3.14 / 6.28 |
| misc_write_edits | 1.11 / 2.4 | 1.16 / 2.35 | 1.1 / 2.33 | 1.46 / 2.09 | 1.42 / 2.42 | 1.45 / 2.47 | 1.34 / 4.54 | 1.16 / 2.56 | 1.15 / 2.41 |
| misc_hot_votes | 5.67 / 15.41 | 5.02 / 12.91 | 5.59 / 12.73 | 5.98 / 14.98 | 5.87 / 11.92 | 5.94 / 12.82 | 5.84 / 13.84 | 5.88 / 12.43 | 6.02 / 12.59 |
| misc_hot_mixed | 4.78 / 10.48 | 4.69 / 8.19 | 5.18 / 8.12 | 6.19 / 14.12 | 5.56 / 8.86 | 5.56 / 8.72 | 5.29 / 8.83 | 5.23 / 10.77 | 5.28 / 11.48 |
| misc_hot_repeat_voters | 5.14 / 14.34 | 4.76 / 7.88 | 4.77 / 8.87 | 5.69 / 15.03 | 5.43 / 12.38 | 5.48 / 13.88 | 5.42 / 12.55 | 5.45 / 11.88 | 5.42 / 13.99 |
| misc_private_bump | 1.3 / 3.41 | 1.16 / 1.94 | 1.24 / 1.82 | 1.53 / 2.52 | 1.51 / 1.6 | 1.51 / 1.89 | 1.65 / 3.63 | 1.56 / 3.24 | 1.6 / 3.38 |
| openapi_read | 1.13 / 3.04 | 1.05 / 1.66 | 1.19 / 1.94 | 1.12 / 2.15 | 1.11 / 1.72 | 1.12 / 1.73 | 1.12 / 2.03 | 1.11 / 2.12 | 1.21 / 2.47 |
| auth_gate_probes | 1.83 / 3.03 | 1.76 / 2.64 | 1.99 / 3.16 | 1.75 / 2.82 | 1.75 / 2.61 | 1.93 / 2.93 | 1.76 / 2.65 | 1.86 / 2.77 | 1.94 / 2.98 |
| rate_limit_on | 0.23 / 0.36 | 0.21 / 0.34 | 0.24 / 0.4 | 0.23 / 0.45 | 0.22 / 0.4 | 0.23 / 0.39 | 0.25 / 0.58 | 0.23 / 0.43 | 0.26 / 0.45 |
| delete_entries | 0.34 / 0.56 | 0.34 / 0.4 | 0.35 / 0.41 | 0.35 / 0.41 | 0.35 / 0.4 | 0.37 / 0.47 | 0.37 / 0.46 | 0.37 / 0.46 | 0.34 / 0.42 |

## Run metadata

| Run | Runtime | vCPUs | Peak RSS (MB) | Wall (s) |
| --- | --- | ---: | ---: | ---: |
| bun-1cpu | bun 1.4.2 | 1 | 96 | 7 |
| bun-2cpu | bun 1.4.2 | 2 | 100 | 7 |
| bun-4cpu | bun 1.4.2 | 4 | 100 | 7 |
| deno-1cpu | deno 2.9.6 | 1 | 150 | 8 |
| deno-2cpu | deno 2.9.6 | 2 | 145 | 7 |
| deno-4cpu | deno 2.9.6 | 4 | 151 | 7 |
| node-1cpu | v24.13.1 | 1 | 126 | 8 |
| node-2cpu | v24.13.1 | 2 | 128 | 7 |
| node-4cpu | v24.13.1 | 4 | 127 | 7 |
